minor mobile post tweaks

--- a/partials/author/author-card.hbs
+++ b/partials/author/author-card.hbs
@@ -15,7 +15,7 @@
     {{/if}}
     <div class="details">
       <div class="author">
-        <a href="{{url}}">{{name}}</a>
+        <a class="author-name" href="{{url}}">{{name}}</a>
       </div>
       <div class="meta-info">
         <span class="title"></span>
