--- a/partials/posts/relatedposts.hbs
+++ b/partials/posts/relatedposts.hbs
@@ -6,12 +6,11 @@
       <div class="single-post">
         <div class="featured-image" style="background:url({{img_url feature_image}})"></div>
         <div class="related-post-info">
-          <h5 class="related-post-title">{{title}}</h5>
+          <span class="related-post-title">{{title}}</span>
         </div>
       </div>
     </a>
     {{/foreach}}
   {{/get}}
-</div>
 </div>
 <!-- End Related Widget -->
