--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -17,18 +17,16 @@
 
   .author {
     font-size: 1.1em;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     line-height: 1;
     color: #326671;
     padding: 0 10px;
   }
 
-  .title {
+  .author-name {
     font-family: @body-font;
-    font-size: 1.3em;
-    font-weight: 600;
+    font-size: 1em;
     color: #326671;
-    margin-bottom: 10px !important;
     margin-top: 2px;
   }
 
@@ -42,7 +40,7 @@
 
   span {
     color: #747885;
-    font-size: 1em;
+    font-size: 1.1em;
   }
 
   .author-specs {
@@ -111,7 +109,7 @@
 
     a {
       color: #105a6d;
-      font-family: @body-font-bold;
+      font-family: @body-font;
 
       &:hover {
         text-decoration: none;
