--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -95,10 +95,10 @@
   }
 
   .excel {
-    color: #2aa62a;
+    color: #5bb85b;
 
     * {
-      color: #2aa62a !important;
+      color: #5bb85b !important;
     }
   }
 
