--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -1,4 +1,4 @@
-header {
+.post-header {
   padding: 10px 0 20px;
   margin: 0;
   box-shadow: unset !important;
@@ -24,7 +24,6 @@ header {
 
     i {
       color: lighten(@text-color, 10%);
-      font-weight: 400;
     }
 
     span {
