--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -1,6 +1,6 @@
 .recent-posts {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr;
     @media(max-width: 600px) {
       grid-template-columns: 1fr;
@@ -36,9 +36,9 @@
       background-size: cover !important;
       margin-bottom: 15px;
       @media(max-width: 600px) {
-        width: 112px;
-        height: 112px;
-        min-width: 112px;
+        width: 100px;
+        height: 100px;
+        min-width: 100px;
         background-size: cover !important;
         float: left;
         margin-right: 5px;
@@ -65,7 +65,7 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         width: -webkit-fill-available;
-        margin: 0 0 5px;
+        margin: 0;
         color: #55575d;
       }
     }
