--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -54,9 +54,18 @@
       line-height: 1;
       display: flex;
       justify-content: flex-start;
+      @media(max-width: @mobile-breakpoint) {
+        line-height: 1.4;
+        margin: 10px 0;
+        padding-left: 0;
+      }
 
       a {
         font-family: 'AvenirNextLTPro-Medium', sans-serif;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        max-width: 100%;
+        overflow: hidden;
       }
 
       * {
@@ -66,11 +75,7 @@
       &:last-child {
         margin-bottom: 0;
       }
-      @media(max-width: @mobile-breakpoint) {
-        line-height: 1.4;
-        margin: 12px 0;
-        padding-left: 0;
-      }
+
 
       &:last-child {
         margin-bottom: 0;
