streamlined post styles

--- a/src/less/author/githubcard.less
+++ b/src/less/author/githubcard.less
@@ -56,7 +56,7 @@
       font-size: 1.1em;
       border: 0;
       line-height: 1;
-      transition: all 0.2s ease-out;
+      transition: @transition;
 
       &:hover {
         color: @hover-color;
