--- a/src/less/etc/error.less
+++ b/src/less/etc/error.less
@@ -67,7 +67,7 @@ header {
     font-size: 30px;
     width: 90%;
     color: white !important;
-    ont-family: 'AvenirNextLTPro-Medium', sans-serif !important;
+    ont-family: 'TTNormsPro-Medium', sans-serif !important;
     text-shadow: -2px 2px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
   }
 
@@ -76,7 +76,7 @@ header {
     padding-bottom: 32px;
     color: white !important;
     text-shadow: -1px 1px 0 #404767;
-    font-family: 'AvenirNextLTPro-Medium', sans-serif;
+    font-family: 'TTNormsPro-Medium', sans-serif;
   }
 
   .error-button {
@@ -88,8 +88,8 @@ header {
     margin-bottom: 10px;
     color: white !important;
     background: rgba(255, 255, 255, 0.25);
-    transition: all 0.2s ease-out;
-    font-family: 'AvenirNextLTPro-Medium', sans-serif;
+    transition: @transition;
+    font-family: 'TTNormsPro-Medium', sans-serif;
     @media(max-width: @mobile-breakpoint) {
       color: #444444;
       width: -webkit-fill-available;
