--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -5,10 +5,8 @@
   background: #fff !important;
   padding: 0;
   margin: 20px 0;
-  border-left: 2px solid #dcdcdc!important;
-  border-bottom: 2px solid #dcdcdc !important;
   position: relative;
-  border: 1px solid #ececec;
+  border: 1px solid #dedfe1;
   color: #5f5f5f;
   @media(max-width: @mobile-breakpoint) {
     width: auto !important;
@@ -40,7 +38,7 @@
 
   span {
     color: #747885;
-    font-size: 1.1em;
+    font-size: 1em;
   }
 
   .author-specs {
