--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -76,7 +76,7 @@
 		color: #6e89b5 !important;
 		background: rgba(199, 210, 240, 0.5);
     border-radius: 1px;
-		transition: all 0.2s ease-out;
+		transition: @transition;
 
 		&:hover {
 			color: white !important;
