--- a/src/less/global/social.less
+++ b/src/less/global/social.less
@@ -20,7 +20,7 @@
 .social-btns .btn .fab {
   transform: scale(1);
   margin: 0 10px 0 0;
-  transition: all 0.2s ease-out;
+  transition: @transition;
   @media(max-width: @tablet-breakpoint) {
     -webkit-transform: scale(0.8);
   }
