--- a/src/less/pages/page.less
+++ b/src/less/pages/page.less
@@ -11,7 +11,7 @@
     background: white;
 
     a {
-      font-family: 'AvenirNextLTPro-Medium', sans-serif;
+      font-family: 'TTNormsPro-Medium', sans-serif;
     }
   }
 }
