--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -3,7 +3,7 @@
 .article-preview {
   background: white;
   width: 32%;
-  transition: all 0.3s ease-out;
+  transition: @transition;
   position: relative;
   box-shadow: 0 0 5px rgba(80,82,204,.1) !important;
 
