--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -86,7 +86,7 @@ blockquote pre {
     height: fit-content;
     color: #122331;
     cursor: pointer;
-    transition: all 0.3s ease-out;
+    transition: @transition;
     display: none;
     z-index: 1;
     mix-blend-mode: color-burn;
