--- a/src/less/posts/galleries.less
+++ b/src/less/posts/galleries.less
@@ -16,7 +16,7 @@
     box-shadow: 1px 0 1px rgba(154, 154, 165, 0.27);
 
     a {
-      transition: all 0.3s ease-out;
+      transition: @transition;
 
       &:hover {
         opacity: 0.7;
