--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -79,7 +79,7 @@
 
 .link-preview {
   padding: 30px 15px 15px;
-  transition: all 0.2s ease-out;
+  transition: @transition;
   margin: 0 auto;
   display: block;
   overflow: hidden;
@@ -155,7 +155,7 @@
     background-color: white;
     background-position-x: center;
     background-position-y: center;
-    transition: all 0.2s ease-out;
+    transition: @transition;
     border: 0;
     border-radius: 2px;
     /*background-color: white;*/
