--- a/src/less/posts/newsletter-widget.less
+++ b/src/less/posts/newsletter-widget.less
@@ -23,7 +23,7 @@
     width: -webkit-fill-available;
     width: -moz-available;
     font-size: .8em;
-    font-family: 'AvenirNextLTPro-Light', sans-serif;
+    font-family: 'TTNormsPro-Light', sans-serif;
     padding: 12px;
     margin-bottom: 11px;
   }
