--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -1,13 +1,13 @@
 .post-header {
-  padding: 10px 0 20px;
+  padding: 0 0 20px;
   margin: 0;
   box-shadow: unset !important;
   @media(max-width: @mobile-breakpoint) {
-    padding: 10px 0 0;
+    padding: 0;
   }
 
   .post-meta {
-    margin: 7px 0 0;
+    margin: 5px 0 0;
     color: lighten(@text-color, 10%);
     font-size: 12px;
     display: flex;
