--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -171,7 +171,7 @@
         background: @theme-color;
         padding: 0;
         text-indent: -9999px;
-        transition: all 0.3s ease-out;
+        transition: @transition;
 
         &:hover {
           background: @hover-color;
