--- a/src/less/projects/picker.less
+++ b/src/less/projects/picker.less
@@ -185,7 +185,7 @@
       display: flex;
       align-items: center;
       padding: 5px;
-      transition: all 0.3s ease-out;
+      transition: @transition;
 
       &:hover {
         color: #7C7E8D;
@@ -209,7 +209,7 @@
   }
 
   .picker li {
-    transition: all 0.3s ease-out;
+    transition: @transition;
 
     &:hover {
       cursor: pointer;
