--- a/src/less/author/meetup.less
+++ b/src/less/author/meetup.less
@@ -48,7 +48,7 @@
           background: #fafafa;
           padding: 15px;
           margin-bottom: 10px;
-          transition: all 0.2s ease-out;
+          transition: @transition;
 
           &:hover {
             background: #d5f0f3;
@@ -87,7 +87,7 @@
               min-height: 36px;
               height: 38px;
               margin-right: 15px;
-              transition: all 0.2s ease-out;
+              transition: @transition;
 
               &:hover {
                 background: #797979;
