--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -1,23 +1,24 @@
 /*====================================================
 	COLOR VARIABLE FOR THEME
 ====================================================*/
-@theme-color: #5eb9d7;        // theme color
+@theme-color: #5eb9d7;            // theme color
 @secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
 @button-color: #5eb9d7;
 @button-hover: #30b1a7;
 @button-shadow: #4497b8;
-@h1-color: #152952;
+@h1-color: #2f394f;
 @header-color: #276890;
-@bg-color: #ecf1f9;					// Background color / secndary theme color
-@bg-color-light: #e0ecef;			// Light background color
-@bg-color-footer: #202020;			// Footer background color
+@bg-color: #ecf1f9;				       	// Background color / secndary theme color
+@bg-color-light: #e0ecef;			    // Light background color
+@bg-color-footer: #202020;			  // Footer background color
 @bg-color-footer-dark: #111111;		// Footer dark background color
-@text-color: #373940;				// Main text color
-@meta-color: #373b46;				// Main text color
-@text-color-heading: #153b52;   // Heading text color
+@text-color: #373940;							// Main text color
+@meta-color: #373b46;				      // Meta info text color
+@post-text-color: #4e505a;        // Unclear why this is different from body font
+@text-color-heading: #153b52;     // Heading text color
 @text-color-footer: #b4b4b4;
-@text-color-light: #959595;			// Light text color
+@text-color-light: #959595;		   	// Light text color
 @border-color: #ebebeb;
 @text-post-header: #20809c;
 
@@ -58,7 +59,10 @@
 @mobile-breakpoint: 600px;
 
 // Font Styles
-@body-font: 'AvenirNextLTPro-Light', sans-serif;
-@body-font-bold: 'AvenirNextLTPro-Medium', sans-serif;
+@body-font: 'TTNormsPro-Regular', sans-serif;
+@body-font-bold: 'TTNormsPro-Medium', sans-serif;
 @header-font: 'TTNormsPro-Regular', sans-serif;
 @header-font-bold: 'TTNormsPro-Medium', sans-serif;
+
+// Animations
+@transition: all 0.2s ease-out;
