--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -26,7 +26,7 @@
 			margin: 0 4px 8px;
 			padding: 7px 12px;
 			border: 1px solid rgba(201, 213, 228, 0.79);
-			background: rgba(198, 220, 237, 0.2);
+			background: rgba(195, 227, 251, 0.2);
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
 				margin: 0 2px 5px;
@@ -84,7 +84,7 @@
 				text-align: center;
 				position: relative;
 				overflow: hidden;
-				box-shadow: 0 0 3px 1px rgba(95, 93, 138, 0.15);
+				border: 1px solid #efefef;
 				opacity: 0.99;
 				padding: 0;
 				@media(max-width: 950px) {
