--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -24,6 +24,7 @@
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
+      justify-content: space-between;
       max-width: 830px;
       margin: 0 auto;
       background: rgba(255, 255, 255, .6);
@@ -38,11 +39,8 @@
         border-right: 1px solid #ecf0f9;
         border-top: 1px solid #ecf0f9;
         visibility: hidden;
-        padding: 30px 0 30px 10px !important;
+        padding: 20px 0 20px 10px !important;
         background: white;
-        @media(max-width: @mobile-breakpoint) {
-          padding: 20px 0 20px 10px !important;
-        }
 
         .info {
           margin-left: 30px;
@@ -62,11 +60,8 @@
         border-left: 1px solid #ecf0f9;
         visibility: hidden;
         border-top: 1px solid #ecf0f9;
-        padding: 30px 10px 30px 0 !important;
+        padding: 20px 10px 20px 0 !important;
         background: white;
-        @media(max-width: @mobile-breakpoint) {
-          padding: 20px 10px 20px 0 !important;
-        }
 
         .info {
           margin-right: 30px;
@@ -93,7 +88,7 @@
         justify-content: left;
         align-items: center;
         padding: 30px 0;
-        width: 49%;
+        width: 48%;
         flex-grow: 1;
 
         * {
