--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -14,7 +14,7 @@
 	}
 
 	.post-wrapper {
-		margin: 30px auto 30px;
+		margin: 30px auto 40px;
 		width: 100%;
 		max-width: 760px;
 		@media(max-width: @tablet-breakpoint) {
@@ -25,12 +25,11 @@
 
 	.container {
 		padding: 0;
-		margin: 0 auto;
+		margin: 0 auto 40px;
 		@media(max-width: 1200px) {
 			width: 100%;
 		}
 		@media(max-width: @tablet-breakpoint) {
-			margin: 0 0 20px 0 !important;
 			width: 100% !important;
 		}
 
@@ -85,7 +84,7 @@
 		.excerpt {
 			font-weight: 600;
 			font-size: 1.2em;
-			margin: 5px 0 20px;
+			margin: 5px 0 30px;
 			line-height: 1.3;
 			color: @h1-color;
 			font-family: @header-font;
