fixed projects page

--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -279,7 +279,7 @@
         padding-bottom: 0;
         position: relative;
         width: 89%;
-        font-family: @body-font-bold !important;
+        font-family: @body-font !important;
         font-weight: 400;
       }
 
@@ -303,11 +303,10 @@
           background-color: #fff;
           padding: 10px 15px;
           position: relative;
-          border: 1px solid #f1f1f1;
-          margin-bottom: 15px;
+          border: 1px solid #ededed;
+          margin-bottom: 10px;
           overflow: hidden;
           border-radius: 3px;
-          box-shadow: 1px 3px 4px rgba(0,0,0,0.08);
 
           &.last-child {
             margin-bottom: 0;
@@ -377,7 +376,7 @@
             }
 
             .epic {
-              border-radius: 4px;
+              border-radius: 2px;
               text-align: center;
               display: flex;
               align-items: center;
