--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -23,7 +23,7 @@
 							<span class="github-card__language-icon" style="color: #F1E05A;">●</span> Javascript
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="far fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -43,7 +43,7 @@
 							<span class="github-card__language-icon" style="color: #F1E05A;">●</span> Javascript
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="far fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -63,7 +63,7 @@
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="far fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -83,7 +83,7 @@
 							<span class="github-card__language-icon" style="color: #2b7489;">●</span> Typescript
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="far fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -103,7 +103,7 @@
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="far fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -123,7 +123,7 @@
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
 						<span class="github-card__meta">
-							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="far fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
