cleaned up mobile css

--- a/partials/widgets/widget-newsletter.hbs
+++ b/partials/widgets/widget-newsletter.hbs
@@ -1,7 +1,7 @@
 <!-- Start Newsletter Widget -->
 {{#if @labs.subscribers}}
   <div id="newsletter-sidebar" class="widget newsletter">
-    <section class="gh-subscribe">
+    <div class="gh-subscribe">
       <h4 class="sidebar-title">{{t "Newsletter"}}</h4>
       <div class="newsletter input-group">
         <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss us your email and we'll promise to only give you the good stuff.</p>
@@ -15,7 +15,7 @@
           button_id="sidebar-newsletter-button"
         }}
       </div>
-    </section>
+    </div>
   </div>
 {{/if}}
 <!-- End Newsletter Widget -->
