--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -20,16 +20,13 @@
     padding: 30px 40px;
     width: auto;
     @media(max-width: @mobile-breakpoint) {
-      padding: 3px 20px 20px;
+      padding: 20px;
     }
   }
 
   .intro {
     margin-bottom: 40px;
-  }
-
-  p {
-    font-weight: 300;
+    margin-top: 20px;
   }
 
   h3 {
