--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -120,10 +120,7 @@
 
   .intro {
     h1 {
-      margin: 10px 0 30px;
-      @media(max-width: @tablet-breakpoint) {
-        margin: 30px 0 0;
-      }
+      margin: 0;
     }
 
     p:last-child {
