--- a/src/less/projects/repos.less
+++ b/src/less/projects/repos.less
@@ -42,6 +42,9 @@
   max-width: 32%;
   min-width: 32%;
   border-radius: 3px;
+  @media(max-width: @tablet-breakpoint) {
+    min-width: 49%;
+  }
   @media(max-width: @mobile-breakpoint) {
     min-width: 100%;
     margin: 0 0 12px;
