--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -19,9 +19,7 @@
 		}
 		@media(max-width: @tablet-breakpoint) {
 			width: 100%;
-		}
-		@media(max-width: @tablet-breakpoint) {
-			grid-template-columns: 1fr;
+			display: block;
 		}
 	}
 }
