--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -71,10 +71,10 @@
   }
 
   .frontend {
-    color: #8c6f05 !important;
+    color: #d7ac0a !important;
 
     * {
-      color: #b59316 !important;
+      color: #d7ac0a !important;
     }
   }
 
