--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -102,7 +102,7 @@
     }
 
     .params {
-      color: #e99b41;
+      color: #cc995f;
     }
 
     .keyword {
@@ -113,7 +113,7 @@
     .string {
       font-weight: 400;
       font-family: 'dm';
-      color: #3a9579;
+      color: #5d9f8f;
 
       @media(max-width: @mobile-breakpoint) {
         white-space: pre;
@@ -125,7 +125,7 @@
     }
 
     .attr {
-      color: #5e79d3;
+      color: #5975c2;
     }
   }
 }
