--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -1,8 +1,7 @@
 .post-content {
   .language-sql,
   .sql {
-    background: #eaeaf3;
-    color: #eaf5f3;
+    background: #efefff;
     border: 1px solid #dadaed;
     color: #444;
 
