--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -15,7 +15,7 @@
 			margin: 10px 10px 10px 0;
 		}
 
-		
+
 
 		a:hover {
 			color: @hover-color;
@@ -35,7 +35,11 @@
 
 		.meta-item {
 			line-height: 1.3;
-			margin: 0 auto 4px;
+			margin: 0 auto;
+
+			@media(max-width: @mobile-breakpoint) {
+			  margin: 0 auto 3px; 
+			}
 		}
 	}
 
