--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -74,8 +74,8 @@
 
   .author {
     .avi {
-      width: 26px;
-      height: 26px;
+      width: 22px;
+      height: 22px;
       display: inline-block;
       margin-right: 10px;
     }
@@ -105,7 +105,7 @@
     }
 
     * {
-      font-size: 1em;
+      font-size: .9em;
       padding: 0;
       @media(max-width: @tablet-breakpoint) {
         font-size: 0.9em;
