--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -259,7 +259,7 @@
 		}
 
 		.news-description {
-			margin: 15px 0 20px;
+			margin: 15px 0;
 			font-size: 0.9em;
 			line-height: 1.5;
 			font-family: @body-font;
