--- a/post.hbs
+++ b/post.hbs
@@ -1,7 +1,6 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- Start Post -->
-<div class="container">
 	{{#post}}
 		<article class="{{post_class}}">
 			<div class="post-wrapper">
@@ -48,10 +47,8 @@
 				{{> posts/roundup-blurb}}
 
 				<!-- start content -->
-				<div class="post-content">
-					<main>
-						{{content}}
-					</main>
+				<main class="post-content">
+					{{content}}
 					<section class="post-footer">
 						<div class="tag-list">
 							{{#if tags}}
@@ -62,7 +59,7 @@
 							{{> posts/share-links}}
 						</div>
 					</section>
-				</div>
+				</main>
 				<!-- end content -->
 			</div>
 		</article>
@@ -80,5 +77,4 @@
 			</script>
 		{{/contentFor}}
 	{{/post}}
-</div>
 <!-- End post -->
