--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -69,7 +69,7 @@ blockquote pre {
     border: 1px solid #e9f1fb;
   }
 
-  .fullscreenbtn {
+  .fullscreen-btn {
     position: absolute;
     bottom: 13px;
     right: 23px;
@@ -172,6 +172,9 @@ blockquote pre {
   @media(max-width: @mobile-breakpoint) {
     margin-left: calc(-50vw + 50%) !important;
     margin-right: calc(-50vw + 50%) !important;
+    max-height: unset !important;
+    padding: 0 !important;
+    border-radius: 0 !important;
   }
 
   code {
