cleaner post dom structure

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -23,9 +23,12 @@
 		}
 	}
 
-	.container {
+	.post {
 		padding: 0;
 		margin: 0 auto 40px;
+		background: white;
+    margin: 0 auto;
+    padding: 30px 0;
 		@media(max-width: 1200px) {
 			width: 100%;
 		}
